--- a/Frontend/automatic-feeder-app/package.json
+++ b/Frontend/automatic-feeder-app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "jquery": "^3.5.1",
