--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/Feeder
-spring.datasource.username=postgres
-#spring.datasource.username=pi
+#spring.datasource.username=postgres
+spring.datasource.username=pi
 spring.datasource.password=admin
 
 #JPA-Hibernate
